# linkerd-await

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deny.toml  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/package/: Dockerfile
.github/workflows/: actions.yml  check.yml  devcontainer.yml  markdown.yml  release.yml
src/: main.rs
tests/: shutdown.rs
