[package]
name = "linkerd-await"
version = "0.2.7"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2021"
publish = false
homepage = "https://linkerd.io"
repository = "https://github.com/linkerd/linkerd-await"

[dependencies]
futures = { version = "0.3", default-features = false }
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
nix = "0.25"

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "env", "std"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "process", "rt", "signal", "time"]

[profile.release]
lto = true
