[package]
name = "linkerd-await"
version = "0.2.8"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2021"
publish = false
homepage = "https://linkerd.io"
repository = "https://github.com/linkerd/linkerd-await"

[dependencies]
futures = { version = "0.3", default-features = false }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
nix = "0.26"

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "env", "std"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "process", "rt", "signal", "time"]

[profile.release]
lto = true
